test/inference/good/typeclass_instance_with_inheritance.mle
class H 'a { h : 'a -> int }
class H 'a => I 'a { i : 'a -> unit }
instance H int { h = (fun (x : int) -> x[]) }
instance I int { i = (fun (x_1 : int) -> ()) }
let (main : int) = 0