test/inference/bad/typeclass_use.mle
class H 'a { x : int }
let ['a] [ H 'a ] (main : int) = ['a] x['a]